Fixed ScrollBar Bug

--- a/src/routes/Settings/Settings.module.scss
+++ b/src/routes/Settings/Settings.module.scss
@@ -119,5 +119,5 @@
 .contentContainer{
   grid-row: 1/1;
   grid-column: 2/3;
-  overflow:scroll;
+  overflow:auto;
 }
